fixed portfolio-section mobile margins

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -138,6 +138,8 @@
 
 
   .portfolio-project-container {
+    margin-top: 0;
+    margin-bottom: 0;
     padding-bottom: 36px;
 
     flex-direction: column-reverse;
